fixed the buttons overlapping and redirect the website to original website login page

--- a/src/components/common/containerBox/containerBox.module.css
+++ b/src/components/common/containerBox/containerBox.module.css
@@ -7,7 +7,8 @@
     box-shadow: 0px 0.2px 1px rgba(0, 0, 0, 0.9);
     padding: 10px 10px;
     border-radius: 12px;
-    height: 500px;
+    min-height: 500px;
+    height: auto;
 
     h3 {
         font-size: 14px;
@@ -19,7 +20,7 @@
         font-weight: 300;
         line-height: 1.7;
     }
-    position: relative;
+    /* position: relative; */
 }
 
 .cBImg {
@@ -33,12 +34,12 @@
 
 .btnWrapper {
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    /* justify-content: center; */
+    /* align-items: flex-end; */
     padding: 10px;
-    position: absolute;
+    /* position: absolute;
     bottom: 0;
-    right: 0;
+    right: 0; */
 }
 
 @media screen and (max-width : 1000px) {
